--- a/index.html
+++ b/index.html
@@ -2,19 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <!-- Set the viewport so this responsive site displays correctly on mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-
     <title>Zijiang James Yang</title>
-    <!-- Include bootstrap CSS -->
     <link href="includes/bootstrap/css/bootstrap-Y.css" rel="stylesheet">
-    <!--<link href="includes/bootstrap.min-4.css" rel="stylesheet">-->
 </head>
 
 <body>
-
-<!-- Include jQuery and bootstrap JS plugins -->
 <script src="includes/jquery/jquery-2.1.3.min.js"></script>
 <script src="includes/bootstrap/js/bootstrap.min.js"></script>
 
@@ -149,10 +143,24 @@
 
           <div class="col-md-10" style="text-align: middle; vertical-align: middle;">
           <p align="justify"> 
+            <br><span style="color: red;">2022</span><br><br>
+            1.	Weifeng Pan, Hua Ming, Zijiang Yang, and Tian Wang, Comments on “Using k-core Decomposition on Class Dependency Networks to Improve Bug Prediction Model’s Practical Performance”, IEEE Trans. Software Eng (TSE), 2022, to appear. <br>
+            <br><span style="color: red;">2020</span><br><br>
+            1.	Jihong Wang, Minnan Luo, Fnu Suya, Jundong Li, Zijiang Yang, Qinghua Zheng: Scalable attack on graph data by injecting vicious nodes. Data Mining and Knowledge Discovery (DMKD) 34(5): 1363-1389 (2020). <br>
+            2.	Fengjuan Gao, Yu Wang, Linzhang Wang, Zijiang Yang, Xuandong Li: Automatic Buffer Overflow Warning Validation. Journal of Computer Science and Technology (JCST). 35(6): 1406-1427 (2020). <br> 
+            3.	Jianlei Chi, Yu Qu, Qinghua Zheng, Zijiang Yang, Wuxia Jin, Di Cui, Ting Liu: Relation-based test case prioritization for regression testing.  Journal of System Software (JSS) 163: 110539 (2020). <br>
+            4.	Xiaodong Zhang, Zijiang Yang, Qinghua Zheng, Yu Hao, Pei Liu, Ting Liu: Tell You a Definite Answer: Whether Your Data is Tainted During Thread Scheduling. IEEE Trans. Software Eng (TSE). 46(9): 916-931 (2020). <br>
+            5.	Jihong Wang, Minnan Luo, Fnu Suya, Jundong Li, Zijiang Yang, Qinghua Zheng: Scalable Attack on Graph Data by Injecting Vicious Nodes. CoRR abs/2004.13825 (2020). <br>
+            6.	Lin Cheng, Zijiang Yang: GRCNN: Graph Recognition Convolutional Neural Network for Synthesizing Programs from Flow Charts. CoRR abs/2011.05980 (2020), <br>
+            <br><span style="color: red;">2019</span><br><br>
+            1.	Zhou Xu, Jin Liu, Xiapu Luo, Zijiang Yang, Yifeng Zhang, Peipei Yuan, Yutian Tang, Tao Zhang: Software defect prediction based on kernel PCA and weighted extreme learning machine. Information and Software Technology (IST). 106: 182-200 (2019).  <br> 
+            2.	Pingyi Zhou, Jin Liu, Xiao Liu, Zijiang Yang, John C. Grundy: Is deep learning better than traditional approaches in tag recommendation for software information sites?  Information and Software Technology (IST). 109: 1-13 (2019). <br> 
             <br><span style="color: red;">2018</span><br><br>
             1.	[BIB]Zhilei Ren, He Jiang, Jifeng Xuan and Zijiang Yang. <strong>Automated Localization for Unreproducible Builds.</strong> The 40th International Conference on Software Engineering (ICSE), May 27-June 3, 2018. Gothenburg, Sweden. <br>
-            2.	[BIB]Yan Zheng, Zan Wang, Xiangyu Fan, Xiang Chen, Zijiang Yang. Localizing Multiple Software Faults based on Evolution Algorithm, Journal of Systems and Software (JSS). To Appear. <br>
-            3.	[<a href="http://dblp.uni-trier.de/rec/bibtex/journals/tse/YiYGWLZ18">BIB</a>]Qiuping Yi, Zijiang Yang, Shengjian Guo, Chao Wang, Jian Liu and Chen Zhao. <a href="http://www.cs.wmich.edu/~zijiang/pub/TSE_PSE.pdf"><strong>Eliminating Path Redundancy via Postconditioned Symbolic Execution</strong></a>. IEEE Transactions on Software Engineering (TSE). 44(1): 25-43 (2018).<br><br>
+            2.	[<a href="http://dblp.uni-trier.de/rec/bibtex/journals/tse/YiYGWLZ18">BIB</a>]Qiuping Yi, Zijiang Yang, Shengjian Guo, Chao Wang, Jian Liu and Chen Zhao. <a href="http://www.cs.wmich.edu/~zijiang/pub/TSE_PSE.pdf"><strong>Eliminating Path Redundancy via Postconditioned Symbolic Execution</strong></a>. IEEE Transactions on Software Engineering (TSE). 44(1): 25-43 (2018).<br><br>
+            3.  Xiaodong Zhang, Zijiang Yang, Qinghua Zheng, Yu Hao, Pei Liu, Lechen Yu, Ting Liu: Debugging Multithreaded Programs as if They Were Sequential. IEEE Access 6: 40024-40040 (2018). <br>
+            4.	Jin Liu, Pingyi Zhou, Zijiang Yang, Xiao Liu, John Grundy: FastTagRec: fast tag recommendation for software information sites. Automated Software Engineering 25(4): 675-701 (2018). <br>
+            5.	Zhenzhou Tian, Ting Liu, Qinghua Zheng, Eryue Zhuang, Ming Fan, Zijiang Yang: Reviving Sequential Program Birthmarking for Multithreaded Software Plagiarism Detection. IEEE Transactions on Software Engineering (TSE). 44(5): 491-511 (2018). <br>
             <span style="color: red;">2017</span><br><br>
             1.	[<a href="http://dblp.uni-trier.de/rec/bibtex/conf/kbse/ChengYW17">BIB</a>]Lin Cheng, Zijiang Yang, Chao Wang. <a href="http://www.cs.wmich.edu/~zijiang/pub/ase17preprint.pdf"><strong>Systematic Reduction of GUI Test Sequences</strong></a>.  The 32nd EEE/ACM International Conference on Automated Software Engineering (ASE), October 30-November 3, 2017. Urbana-Champaign, Illinois, USA.<br>
             2.	[<a href="http://dblp.uni-trier.de/rec/bibtex/journals/jss/YuLYL17">BIB</a>]Xiao Yu, Jin Liu, Zijiang Yang,Qing Li, Xiangyang Jia. <a href="http://www.cs.wmich.edu/~zijiang/pub/issre17.pdf"><strong>Learning from Imbalanced Data for Predicting the Number of Software Defects</strong></a>. The 28th International Symposium on Software Reliability Engineering (ISSRE), October 23-26, 2017. Toulouse, France.<br>
