--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <!-- Set the viewport so this responsive site displays correctly on mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
+
     <title>Zijiang James Yang</title>
+    <!-- Include bootstrap CSS -->
     <link href="includes/bootstrap/css/bootstrap-Y.css" rel="stylesheet">
+    <!--<link href="includes/bootstrap.min-4.css" rel="stylesheet">-->
 </head>
 
 <body>
+
+<!-- Include jQuery and bootstrap JS plugins -->
 <script src="includes/jquery/jquery-2.1.3.min.js"></script>
 <script src="includes/bootstrap/js/bootstrap.min.js"></script>
 
@@ -145,6 +151,11 @@
           <p align="justify"> 
             <br><span style="color: red;">2022</span><br><br>
             1.	Weifeng Pan, Hua Ming, Zijiang Yang, and Tian Wang, Comments on “Using k-core Decomposition on Class Dependency Networks to Improve Bug Prediction Model’s Practical Performance”, IEEE Trans. Software Eng (TSE), 2022, to appear. <br>
+            2.	M. Fan, W. Wei, W. Jin, Z. Yang, T. Liu. Explanation-Guided Fairness Testing through Genetic Algorithm. IEEE International Conference on Software Engineering (ICSE), 2022. <br>
+            <br><span style="color: red;">2021</span><br><br>
+            1.	1.J. Guo, Z. Si, Y. Wang, Q. Liu, M. Fan, J. LOU, Z. Yang, T. Liu. Chase: A Large-Scale and Pragmatic Chinese Dataset for Cross-Database Context-Dependent Text-to-SQL. 57th Annual Meeting of the Association for Computational Linguistics (ACL), Bangkok, Thailand, 2021. <br>
+            2.	H. Wang, Y. Lin, Z. Yang, J. Sun, Y. Liu, J. Dong, Q. Zheng, T. Liu. Explaining Regressions via Alignment Slicing and Mending. IEEE Transactions on Software Engineering. 47(11), 2421-2437, 2021. <br>
+            3.	Kunpeng Yu, Chenxu Wang, Yan Cai, Xiapu Luo, Zijiang Yang, Detecting concurrency vulnerabilities based on partial orders of memory and thread events, the 29th ACM Joint Meeting on European Software Engineering Conference and Symposium on the Foundations of Software Engineering (FSE), 2021. <br>
             <br><span style="color: red;">2020</span><br><br>
             1.	Jihong Wang, Minnan Luo, Fnu Suya, Jundong Li, Zijiang Yang, Qinghua Zheng: Scalable attack on graph data by injecting vicious nodes. Data Mining and Knowledge Discovery (DMKD) 34(5): 1363-1389 (2020). <br>
             2.	Fengjuan Gao, Yu Wang, Linzhang Wang, Zijiang Yang, Xuandong Li: Automatic Buffer Overflow Warning Validation. Journal of Computer Science and Technology (JCST). 35(6): 1406-1427 (2020). <br> 
