--- a/index.html
+++ b/index.html
@@ -150,22 +150,26 @@
           <div class="col-md-10" style="text-align: middle; vertical-align: middle;">
           <p align="justify"> 
             <br><span style="color: red;">2022</span><br><br>
-            1.	Weifeng Pan, Hua Ming, Zijiang Yang, and Tian Wang, Comments on “Using k-core Decomposition on Class Dependency Networks to Improve Bug Prediction Model’s Practical Performance”, IEEE Trans. Software Eng (TSE), 2022, to appear. <br>
-            2.	M. Fan, W. Wei, W. Jin, Z. Yang, T. Liu. Explanation-Guided Fairness Testing through Genetic Algorithm. IEEE International Conference on Software Engineering (ICSE), 2022. <br>
+            1.	Weifeng Pan, Hua Ming, Dae-Kyoo Kim, and Zijiang Yang，Pride: Prioritizing Documentation Effort Based on a PageRank-Like Algorithm and Simple Filtering Rules，IEEE Trans. Software Eng (TSE), 2022, to appear.<br>
+            2.  Weifeng Pan, Hua Ming, Zijiang Yang, and Tian Wang, Comments on “Using k-core Decomposition on Class Dependency Networks to Improve Bug Prediction Model’s Practical Performance”, IEEE Trans. Software Eng (TSE), 2022, to appear.<br>
+            3.	M. Fan, W. Wei, W. Jin, Z. Yang, T. Liu. Explanation-Guided Fairness Testing through Genetic Algorithm. IEEE International Conference on Software Engineering (ICSE), 2022.<br>
             <br><span style="color: red;">2021</span><br><br>
-            1.	1.J. Guo, Z. Si, Y. Wang, Q. Liu, M. Fan, J. LOU, Z. Yang, T. Liu. Chase: A Large-Scale and Pragmatic Chinese Dataset for Cross-Database Context-Dependent Text-to-SQL. 57th Annual Meeting of the Association for Computational Linguistics (ACL), Bangkok, Thailand, 2021. <br>
-            2.	H. Wang, Y. Lin, Z. Yang, J. Sun, Y. Liu, J. Dong, Q. Zheng, T. Liu. Explaining Regressions via Alignment Slicing and Mending. IEEE Transactions on Software Engineering. 47(11), 2421-2437, 2021. <br>
+            1.  J. Guo, Z. Si, Y. Wang, Q. Liu, M. Fan, J. LOU, Z. Yang, T. Liu. Chase: A Large-Scale and Pragmatic Chinese Dataset for Cross-Database Context-Dependent Text-to-SQL. 57th Annual Meeting of the Association for Computational Linguistics (ACL), Bangkok, Thailand, 2021. <br>
+            2.	H. Wang, Y. Lin, Z. Yang, J. Sun, Y. Liu, J. Dong, Q. Zheng, T. Liu. Explaining Regressions via Alignment Slicing and Mending. IEEE Transactions on Software Engineering. 47(11), 2421-2437, 2021.<br>
             3.	Kunpeng Yu, Chenxu Wang, Yan Cai, Xiapu Luo, Zijiang Yang, Detecting concurrency vulnerabilities based on partial orders of memory and thread events, the 29th ACM Joint Meeting on European Software Engineering Conference and Symposium on the Foundations of Software Engineering (FSE), 2021. <br>
             <br><span style="color: red;">2020</span><br><br>
             1.	Jihong Wang, Minnan Luo, Fnu Suya, Jundong Li, Zijiang Yang, Qinghua Zheng: Scalable attack on graph data by injecting vicious nodes. Data Mining and Knowledge Discovery (DMKD) 34(5): 1363-1389 (2020). <br>
             2.	Fengjuan Gao, Yu Wang, Linzhang Wang, Zijiang Yang, Xuandong Li: Automatic Buffer Overflow Warning Validation. Journal of Computer Science and Technology (JCST). 35(6): 1406-1427 (2020). <br> 
-            3.	Jianlei Chi, Yu Qu, Qinghua Zheng, Zijiang Yang, Wuxia Jin, Di Cui, Ting Liu: Relation-based test case prioritization for regression testing.  Journal of System Software (JSS) 163: 110539 (2020). <br>
-            4.	Xiaodong Zhang, Zijiang Yang, Qinghua Zheng, Yu Hao, Pei Liu, Ting Liu: Tell You a Definite Answer: Whether Your Data is Tainted During Thread Scheduling. IEEE Trans. Software Eng (TSE). 46(9): 916-931 (2020). <br>
+            3.	Jianlei Chi, Yu Qu, Qinghua Zheng, Zijiang Yang, Wuxia Jin, Di Cui, Ting Liu: Relation-based test case prioritization for regression testing.  Journal of System Software，2020. <br>
+            4.	Xiaodong Zhang, Zijiang Yang, Qinghua Zheng, Yu Hao, Pei Liu, Ting Liu: Tell You a Definite Answer: Whether Your Data is Tainted During Thread Scheduling. IEEE Trans. Software Eng (TSE). 46(9): 916-931 (2020) .<br>
             5.	Jihong Wang, Minnan Luo, Fnu Suya, Jundong Li, Zijiang Yang, Qinghua Zheng: Scalable Attack on Graph Data by Injecting Vicious Nodes. CoRR abs/2004.13825 (2020). <br>
             6.	Lin Cheng, Zijiang Yang: GRCNN: Graph Recognition Convolutional Neural Network for Synthesizing Programs from Flow Charts. CoRR abs/2011.05980 (2020), <br>
             <br><span style="color: red;">2019</span><br><br>
-            1.	Zhou Xu, Jin Liu, Xiapu Luo, Zijiang Yang, Yifeng Zhang, Peipei Yuan, Yutian Tang, Tao Zhang: Software defect prediction based on kernel PCA and weighted extreme learning machine. Information and Software Technology (IST). 106: 182-200 (2019).  <br> 
-            2.	Pingyi Zhou, Jin Liu, Xiao Liu, Zijiang Yang, John C. Grundy: Is deep learning better than traditional approaches in tag recommendation for software information sites?  Information and Software Technology (IST). 109: 1-13 (2019). <br> 
+            1.	Zhou Xu, Jin Liu, Xiapu Luo, Zijiang Yang, Yifeng Zhang, Peipei Yuan, Yutian Tang, Tao Zhang.Software defect prediction based on kernel PCA and weighted extreme learning machine. Information and Software Technology (IST). 106: 182-200,2019. <br> 
+            2.	Pingyi Zhou, Jin Liu, Xiao Liu, Zijiang Yang, John Grundy. Is deep learning better than traditional approaches in tag recommendation for software information sites? Information and Software Technology (IST). 109: 1-13,2019. <br> 
+            3.  Jian Gao, Yu Jiang, Zhe Liu, Xin Yang, Cong Wang, Xun Jiao, Zijiang Yang, Jiaguang Sun. Semantic Learning and Emulation Based Cross-platform Binary Vulnerability Seeker. IEEE Transactions on Software Engineering, 2019.<br> 
+            4.  Haijun Wang, Yun Lin, Zijiang Yang, Jun Sun, Yang Liu, Jin Song Dong, Qinghua Zheng, Ting Liu. Explaining regressions via alignment slicing and mending. IEEE Transactions on Software Engineering, 2019.<br> 
+            5.  Weifeng Pan, Hua Ming, Carl Chang, Zijiang Yang, Dae-Kyoo Kim. ElementRank: Ranking Java Software Classes and Packages using a Multilayer Complex Network-Based Approach. IEEE Transactions on Software Engineering, 2019.<br> 
             <br><span style="color: red;">2018</span><br><br>
             1.	[BIB]Zhilei Ren, He Jiang, Jifeng Xuan and Zijiang Yang. <strong>Automated Localization for Unreproducible Builds.</strong> The 40th International Conference on Software Engineering (ICSE), May 27-June 3, 2018. Gothenburg, Sweden. <br>
             2.	[<a href="http://dblp.uni-trier.de/rec/bibtex/journals/tse/YiYGWLZ18">BIB</a>]Qiuping Yi, Zijiang Yang, Shengjian Guo, Chao Wang, Jian Liu and Chen Zhao. <a href="http://www.cs.wmich.edu/~zijiang/pub/TSE_PSE.pdf"><strong>Eliminating Path Redundancy via Postconditioned Symbolic Execution</strong></a>. IEEE Transactions on Software Engineering (TSE). 44(1): 25-43 (2018).<br><br>
