--- a/index.html
+++ b/index.html
@@ -158,12 +158,12 @@
             2.	H. Wang, Y. Lin, Z. Yang, J. Sun, Y. Liu, J. Dong, Q. Zheng, T. Liu. Explaining Regressions via Alignment Slicing and Mending. IEEE Transactions on Software Engineering. 47(11), 2421-2437, 2021.<br>
             3.	Kunpeng Yu, Chenxu Wang, Yan Cai, Xiapu Luo, Zijiang Yang, Detecting concurrency vulnerabilities based on partial orders of memory and thread events, the 29th ACM Joint Meeting on European Software Engineering Conference and Symposium on the Foundations of Software Engineering (FSE), 2021. <br>
             <br><span style="color: red;">2020</span><br><br>
-            1.	Jihong Wang, Minnan Luo, Fnu Suya, Jundong Li, Zijiang Yang, Qinghua Zheng: Scalable attack on graph data by injecting vicious nodes. Data Mining and Knowledge Discovery (DMKD) 34(5): 1363-1389 (2020). <br>
-            2.	Fengjuan Gao, Yu Wang, Linzhang Wang, Zijiang Yang, Xuandong Li: Automatic Buffer Overflow Warning Validation. Journal of Computer Science and Technology (JCST). 35(6): 1406-1427 (2020). <br> 
+            1.	Jihong Wang, Minnan Luo, Fnu Suya, Jundong Li, Zijiang Yang, Qinghua Zheng: Scalable attack on graph data by injecting vicious nodes. Data Mining and Knowledge Discovery (DMKD) 34(5): 1363-1389 (2020)<br>
+            2.	Fengjuan Gao, Yu Wang, Linzhang Wang, Zijiang Yang, Xuandong Li: Automatic Buffer Overflow Warning Validation. Journal of Computer Science and Technology (JCST). 35(6): 1406-1427 (2020)<br> 
             3.	Jianlei Chi, Yu Qu, Qinghua Zheng, Zijiang Yang, Wuxia Jin, Di Cui, Ting Liu: Relation-based test case prioritization for regression testing.  Journal of System Software，2020. <br>
-            4.	Xiaodong Zhang, Zijiang Yang, Qinghua Zheng, Yu Hao, Pei Liu, Ting Liu: Tell You a Definite Answer: Whether Your Data is Tainted During Thread Scheduling. IEEE Trans. Software Eng (TSE). 46(9): 916-931 (2020) .<br>
-            5.	Jihong Wang, Minnan Luo, Fnu Suya, Jundong Li, Zijiang Yang, Qinghua Zheng: Scalable Attack on Graph Data by Injecting Vicious Nodes. CoRR abs/2004.13825 (2020). <br>
-            6.	Lin Cheng, Zijiang Yang: GRCNN: Graph Recognition Convolutional Neural Network for Synthesizing Programs from Flow Charts. CoRR abs/2011.05980 (2020), <br>
+            4.	Xiaodong Zhang, Zijiang Yang, Qinghua Zheng, Yu Hao, Pei Liu, Ting Liu: Tell You a Definite Answer: Whether Your Data is Tainted During Thread Scheduling. IEEE Trans. Software Eng (TSE). 46(9): 916-931 (2020)<br>
+            5.	Jihong Wang, Minnan Luo, Fnu Suya, Jundong Li, Zijiang Yang, Qinghua Zheng: Scalable Attack on Graph Data by Injecting Vicious Nodes. CoRR abs/2004.13825 (2020)<br>
+            6.	Lin Cheng, Zijiang Yang: GRCNN: Graph Recognition Convolutional Neural Network for Synthesizing Programs from Flow Charts. CoRR abs/2011.05980 (2020) <br>
             <br><span style="color: red;">2019</span><br><br>
             1.	Zhou Xu, Jin Liu, Xiapu Luo, Zijiang Yang, Yifeng Zhang, Peipei Yuan, Yutian Tang, Tao Zhang.Software defect prediction based on kernel PCA and weighted extreme learning machine. Information and Software Technology (IST). 106: 182-200,2019. <br> 
             2.	Pingyi Zhou, Jin Liu, Xiao Liu, Zijiang Yang, John Grundy. Is deep learning better than traditional approaches in tag recommendation for software information sites? Information and Software Technology (IST). 109: 1-13,2019. <br> 
